src/components/InputWithIdentifier/InputWithIdentifier.css
.txtNameContainer {
  position: relative;

  .txtIdContainer {
    position: absolute;
    align-items: center;
    right: 0;
  }

  .idValue {
    max-width: 100px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--primary-7);
  }

  .idError {
    margin-top: -8px;
  }
}

